--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -1,174 +1,161 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://unpkg.com/tailwindcss@1.9.6/dist/tailwind.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ url_for('static',filename='main.css') }}" />
-        <title>Credit Card Approval Prediction</title>
-    </head>
+{% extends 'base.html' %}
 
-    <body class="font-mono">
-    <div class="flex items-center justify-center h-screen">
-      <div class="p-12 max-w-lg bg-white rounded-lg overflow-hidden shadow-lg">
-        <div class="font-bold text-xl mb-2">
-          Credit Card Approval Prediction
-        </div>
-        <hr />
+{% block content %}
+<head>
+    <title>Credit Card Approval Prediction</title>
+</head>
+  
+<body class="font-mono">
+  <div class="mt-3 mb-1 flex items-center justify-center h-screen">
+    <div class="p-12 max-w-2xl bg-white rounded-lg overflow-hidden shadow-lg">
+      <div class="font-bold text-xl mb-2">
+        Credit Card Approval Prediction Form
+      </div>
+      <hr />
+      <br />
+
+      <form id="approval-form" action="{{ url_for('main') }}" method="POST">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="gender">
+          Select your gender:
+        </label>
+        <input type="radio" id="male" name="gender" value="0" checked />
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" value="1" />
+        <label for="female">Female</label>
+        
         <br />
-
-        <form id="approval-form" action="{{ url_for('main') }}" method="POST">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="gender">
-            Select your gender:
-          </label>
-
-          <input type="radio" id="male" name="gender" value="0" checked />
-          <label for="male">Male</label>
-          
-          <input type="radio" id="female" name="gender" value="1" />
-          <label for="female">Female</label>
-          
         <br />
 
         <label class="block text-gray-700 text-sm font-bold mb-2" for="age">
-            Enter your age: 
+          Enter your age: 
         </label>
-        
         <input type="number" id="age" name="age" min="18" max="100" value="18">
         
         <br />
+        <br />
         
         <label class="block text-gray-700 text-sm font-bold mb-2" for="total_income">
-            Enter your total annual income: 
+          Enter your total annual income: 
         </label>
-        
         <input type="number" id="total_income" name="income" min="0" max="500000" value="0">
         
+        <br />
+        <br />
+
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="total_worked">
+          Enter the total years you have worked: 
+        </label>
+        <input type="number" id="total_worked" name="total_worked" min="1" max="60" value="1">
+        
+        <br />
         <br />
 
         <label class="block text-gray-700 text-sm font-bold mb-2" for="employment_status">
             What is your employment status?
-          </label>
+        </label>
         <select
             id="employment_status"
             name="employment_status"
             class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
             required
-          >
+        >
             <option></option>
             <option value="Government employee">Government employee</option>
             <option value="Hourly/commission employee">Hourly/commission employee</option>
             <option value="Pensioner">Pensioner</option>
             <option value="Salaried employee">Salaried employee</option>
             <option value="Student">Student</option>
-          </select>
+        </select>
 
-          <br />
-
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="total_worked">
-            Enter the total years you have worked: 
-        </label>
-        
-        <input type="number" id="total_worked" name="total_worked" min="1" max="60" value="1">
-        
         <br />
 
         <label class="block text-gray-700 text-sm font-bold mb-2" for="education">
-            What is the highest level of education you have completed?
-          </label>
+          What is the highest level of education you have completed?
+        </label>
         <select
             id="education"
             name="education"
             class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
             required
-          >
+        >
             <option></option>
             <option value="Bachelor's degree">Bachelor's degree</option>
             <option value="High school">High school</option>
             <option value="Master's degree or higher">Master's degree or higher</option>
             <option value="Some college">Some college</option>
             <option value="Some high school">Some high school</option>
-          </select>
+        </select>
 
-          <br />
+        <br />
 
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="family_status">
-            What is your marital status?
-          </label>
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="family_status">
+          What is your marital status?
+        </label>
         <select
             id="family_status"
             name="family_status"
             class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
             required
-          >
+        >
             <option></option>
             <option value="Married">Married</option>
             <option value="Separated">Separated</option>
             <option value="Single">Single</option>
             <option value="Widow">Widow</option>
-          </select>
+        </select>
 
-          <br />
+        <br />
 
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="housing">
-            What is your housing situation?
-          </label>
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="housing">
+          What is your housing situation?
+        </label>
         <select
             id="housing"
             name="housing"
             class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
             required
-          >
-            <option></option>
-            <option value="Homeowner">Homeowner</option>
-            <option value="Public housing">Public housing</option>
-            <option value="Renting">Renting</option>
-            <option value="With parents">With parents</option>
-          </select>
+        >
+          <option></option>
+          <option value="Homeowner">Homeowner</option>
+          <option value="Public housing">Public housing</option>
+          <option value="Renting">Renting</option>
+          <option value="With parents">With parents</option>
+        </select>
 
-          <br />
+        <br />
 
         <label class="block text-gray-700 text-sm font-bold mb-2" for="own_car">
-            Do you own a car?
-          </label>
-
-          <input type="radio" id="yes_car" name="own_car" value="1" checked />
-          <label for="yes_car">Yes</label>
-          
-          <input type="radio" id="no_car" name="own_car" value="0" />
-          <label for="no_car">No</label>
+          Do you own a car?
+        </label>
+        <input type="radio" id="yes_car" name="own_car" value="1" checked />
+        <label for="yes_car">Yes</label>
+        <input type="radio" id="no_car" name="own_car" value="0" />
+        <label for="no_car">No</label>
           
         <br />
 
         <label class="block text-gray-700 text-sm font-bold mb-2" for="own_realty">
-            Do you own any properties?
-          </label>
-
-          <input type="radio" id="yes_realty" name="own_realty" value="1" checked />
-          <label for="yes_realty">Yes</label>
-          
-          <input type="radio" id="no_realty" name="own_realty" value="0" />
-          <label for="no_realty">No</label>
+          Do you own any properties?
+        </label>
+        <input type="radio" id="yes_realty" name="own_realty" value="1" checked />
+        <label for="yes_realty">Yes</label>
+        <input type="radio" id="no_realty" name="own_realty" value="0" />
+        <label for="no_realty">No</label>
           
         <br />
 
-          <input
-            type="submit"
-            value="Submit"
-            class="w-full bg-blue-500 text-white font-bold mt-8 p-4 rounded focus:outline-none focus:shadow-outline"
-          />
-        </form>
-
-        <div class="result mt-12" align="center">
-          <p class="text-blue-700 text-lg font-bold border rounded mt-4">
-            {{ result }}
-          </p>
-        </div>
-
-      </div>
+        <input
+          type="submit"
+          value="Submit"
+          class="w-full bg-blue-500 text-white font-bold mt-8 p-4 rounded focus:outline-none focus:shadow-outline"
+        />
+      </form>
     </div>
+  </div>
 
-    <script
-      src="{{ url_for('static',filename='main.js') }}"
-      type="text/javascript"
-    ></script>
-  </body>
-</html>
+  <script
+    src="{{ url_for('static',filename='main.js') }}"
+    type="text/javascript"
+  ></script>
+</body>
+{% endblock %}
