--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="font-mono">
-    <div class="mt-auto mb-auto flex items-center justify-center h-screen">
+    <div class="mt-3 mb-1 flex items-center justify-center h-screen">
         <div class="p-12 max-w-6xl bg-white rounded-lg overflow-hidden shadow-lg">
             <div class="font-bold text-2xl mb-2">
             About the Project
