Add alt text for images

--- a/webapp/templates/model.html
+++ b/webapp/templates/model.html
@@ -28,7 +28,7 @@
             Logistic regression uses the logistic function to estimate the probability of an event occurring based on previous data.
             <br />
             <br />
-            <img src="../static/images/metrics/metrics_lr.png" style="width:100%">
+            <img src="../static/images/metrics/metrics_lr.png" alt="Performance metrics for logistic regression algorithm" style="width:100%">
             
             <br />
             <b class="text-lg">K-Nearest Neighbors Algorithm</b>
@@ -36,7 +36,7 @@
             K-nearest neighbors classifies an object based on the class that is most common among its k-nearest neighbors.
             <br />
             <br />
-            <img src="../static/images/metrics/metrics_knn.png" style="width:100%">
+            <img src="../static/images/metrics/metrics_knn.png" alt="Performance metrics for k-nearest neighbors algorithm" style="width:100%">
             
             <br />
             <b class="text-lg">Decision Tree Algorithm</b>
@@ -44,7 +44,7 @@
             Decision tree uses a tree-like model of decisions to predict the value of a target variable based on multiple features.
             <br />
             <br />
-            <img src="../static/images/metrics/metrics_dt.png" style="width:100%">
+            <img src="../static/images/metrics/metrics_dt.png" alt="Performance metrics for decision tree algorithm" style="width:100%">
 
             <br />
             <b class="text-lg">Random Forest Algorithm</b>
@@ -52,7 +52,7 @@
             Random forest uses multiple decision trees and predicts the class that is selected by the most trees.
             <br />
             <br />
-            <img src="../static/images/metrics/metrics_rf.png" style="width:100%">
+            <img src="../static/images/metrics/metrics_rf.png" alt="Performance metrics for random forest algorithm" style="width:100%">
             <br />
 
             <b class="text-xl">Conclusion</b>
