--- a/webapp/templates/eda.html
+++ b/webapp/templates/eda.html
@@ -64,57 +64,57 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 11</div>
-                <img src="../static/images/plots/applicant_gender.png" style="width:100%">
+                <img src="../static/images/plots/applicant_gender.png" alt="Plot of number of applicants per gender" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 11</div>
-                <img src="../static/images/plots/applicant_car.png" style="width:100%">
+                <img src="../static/images/plots/applicant_car.png" alt="Plot of number of applicants that own a car" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 11</div>
-                <img src="../static/images/plots/applicant_realty.png" style="width:100%">
+                <img src="../static/images/plots/applicant_realty.png" alt="Plot of number of applicants that own realty" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 11</div>
-                <img src="../static/images/plots/applicant_family.png" style="width:100%">
+                <img src="../static/images/plots/applicant_family.png" alt="Plot of number of applicants per family status" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">5 / 11</div>
-                <img src="../static/images/plots/applicant_housing.png" style="width:100%">
+                <img src="../static/images/plots/applicant_housing.png" alt="Plot of number of applicants per housing type" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">6 / 11</div>
-                <img src="../static/images/plots/applicant_employment.png" style="width:100%">
+                <img src="../static/images/plots/applicant_employment.png" alt="Plot of number of applicants per employment status" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">7 / 11</div>
-                <img src="../static/images/plots/applicant_education.png" style="width:100%">
+                <img src="../static/images/plots/applicant_education.png" alt="Plot of number of applicants per highest education completed" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">8 / 11</div>
-                <img src="../static/images/plots/applicant_status.png" style="width:100%">
+                <img src="../static/images/plots/applicant_status.png" alt="Plot of number of applicants per approval status" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">9 / 11</div>
-                <img src="../static/images/plots/applicant_age.png" style="width:100%">
+                <img src="../static/images/plots/applicant_age.png" alt="Plot of distribution of applicant age" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">10 / 11</div>
-                <img src="../static/images/plots/applicant_worked.png" style="width:100%">
+                <img src="../static/images/plots/applicant_worked.png" alt="Plot of distribution of total years worked" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">11 / 11</div>
-                <img src="../static/images/plots/applicant_income.png" style="width:100%">
+                <img src="../static/images/plots/applicant_income.png" alt="Plot of distribution of total annual income" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
