--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -8,13 +8,13 @@
 <body class="font-mono">
     <div class="mt-3 mb-1 flex items-center justify-center h-screen">
         <div class="p-12 max-w-6xl bg-white rounded-lg overflow-hidden shadow-lg">
-            <div class="font-bold text-2xl mb-2">
-            About the Project
+            <div>
+            <h1 class="font-bold text-2xl mb-2">About the Project</h1>
             </div>
             <hr />
             <br />
 
-            <b class="text-xl">Background</b>
+            <h2 class="font-bold text-xl">Background</h2>
             <br />
             This Credit Card Approval Prediction web application is a capstone project developed for COMP 7980.
             It aims to apply the following:
@@ -27,7 +27,7 @@
             </ul>
 
             <br />
-            <b class="text-xl">Objective</b>
+            <h2 class="font-bold text-xl">Objective</h2>
             <br />
             This project aims to simulate a credit card approval system. A machine learning model has been trained on an existing dataset, 
             and the trained model has been serialized to serve as the web application's backend. Based on the user's inputs with the form 
@@ -35,7 +35,7 @@
             <br />
 
             <br />
-            <b class="text-xl">Dataset and Model</b>
+            <h2 class="font-bold text-xl">Dataset and Model</h2>
             <br />
             The dataset used to train the machine learning model can be found <a href="https://www.kaggle.com/datasets/caesarmario/application-data/data" class="text-fg-brand underline hover:no-underline">here</a>. 
             More information about how the dataset was obtained can be found on the <a href="/dataset/" class="text-fg-brand underline hover:no-underline">Dataset page</a>
@@ -44,7 +44,7 @@
             <br />
 
             <br />
-            <b class="text-xl">Technologies Used</b>
+            <h2 class="font-bold text-xl">Technologies Used</h2>
             <br />
             <ul class="list-disc list-inside">
                 <li>Frontend: HTML, CSS, JavaScript</li>
