--- a/webapp/templates/eda.html
+++ b/webapp/templates/eda.html
@@ -9,13 +9,13 @@
 <body class="font-mono">
     <div class="mt-3 mb-1 flex items-center justify-center h-screen">
         <div class="p-12 max-w-6xl bg-white rounded-lg overflow-hidden shadow-lg">
-            <div class="font-bold text-2xl mb-2">
-            Exploratory Data Analysis
+            <div>
+            <h1 class="font-bold text-2xl mb-2">Exploratory Data Analysis</h1>
             </div>
             <hr />
             <br />
 
-            <b class="text-xl">Data Preprocessing and Feature Engineering</b>
+            <h2 class="font-bold text-xl">Data Preprocessing and Feature Engineering</h2>
             <br />
             Before preprocessing I formatted the original data .csv file to strip it of excess whitespace to help with general readability. 
             I then observed basic information about the dataset, such as the head of the dataset, information about the columns, and number of unique values per column.
@@ -52,7 +52,7 @@
             </ul>
 
             <br />
-            <b class="text-xl">Trend Analysis</b>
+            <h2 class="font-bold text-xl">Trend Analysis</h2>
             <br />
             Several plots were generated during EDA to help understand the relationship between features prior to training the model:
             <br />
