--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -8,8 +8,8 @@
 <body class="font-mono">
   <div class="mt-3 mb-1 flex items-center justify-center h-screen">
     <div class="p-12 max-w-2xl bg-white rounded-lg overflow-hidden shadow-lg">
-      <div class="font-bold text-xl mb-2">
-        Credit Card Approval Prediction Form
+      <div>
+      <h1 class="font-bold text-xl mb-2">Credit Card Approval Prediction Form</h1>
       </div>
       <hr />
       <br />
