--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -7,7 +7,7 @@
   
 <body class="font-mono">
   <div class="mt-3 mb-1 flex items-center justify-center h-screen">
-    <div class="p-12 max-w-2xl bg-white rounded-lg overflow-hidden shadow-lg">
+    <div class="p-12 max-w-2xl text-black bg-white rounded-lg overflow-hidden shadow-lg">
       <div>
       <h1 class="font-bold text-xl mb-2">Credit Card Approval Prediction Form</h1>
       </div>
@@ -15,7 +15,7 @@
       <br />
 
       <form id="approval-form" action="{{ url_for('main') }}" method="POST">
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="gender">
+        <label class="block text-sm font-bold mb-2" for="gender">
           Select your gender:
         </label>
         <input type="radio" id="male" name="gender" value="0" checked />
@@ -26,7 +26,7 @@
         <br />
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="age">
+        <label class="block text-sm font-bold mb-2" for="age">
           Enter your age: 
         </label>
         <input type="number" id="age" name="age" min="18" max="100" value="18">
@@ -34,7 +34,7 @@
         <br />
         <br />
         
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="total_income">
+        <label class="block text-sm font-bold mb-2" for="total_income">
           Enter your total annual income: 
         </label>
         <input type="number" id="total_income" name="income" min="0" max="500000" value="0">
@@ -42,7 +42,7 @@
         <br />
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="total_worked">
+        <label class="block text-sm font-bold mb-2" for="total_worked">
           Enter the total years you have worked: 
         </label>
         <input type="number" id="total_worked" name="total_worked" min="1" max="60" value="1">
@@ -50,7 +50,7 @@
         <br />
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="employment_status">
+        <label class="block text-sm font-bold mb-2" for="employment_status">
             What is your employment status?
         </label>
         <select
@@ -69,7 +69,7 @@
 
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="education">
+        <label class="block text-sm font-bold mb-2" for="education">
           What is the highest level of education you have completed?
         </label>
         <select
@@ -88,7 +88,7 @@
 
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="family_status">
+        <label class="block text-sm font-bold mb-2" for="family_status">
           What is your marital status?
         </label>
         <select
@@ -106,7 +106,7 @@
 
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="housing">
+        <label class="block text-sm font-bold mb-2" for="housing">
           What is your housing situation?
         </label>
         <select
@@ -124,7 +124,7 @@
 
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="own_car">
+        <label class="block text-sm font-bold mb-2" for="own_car">
           Do you own a car?
         </label>
         <input type="radio" id="yes_car" name="own_car" value="1" checked />
@@ -134,7 +134,7 @@
           
         <br />
 
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="own_realty">
+        <label class="block text-sm font-bold mb-2" for="own_realty">
           Do you own any properties?
         </label>
         <input type="radio" id="yes_realty" name="own_realty" value="1" checked />
