--- a/webapp/templates/model.html
+++ b/webapp/templates/model.html
@@ -7,7 +7,7 @@
 
 <body class="font-mono">
     <div class="mt-3 mb-1 flex items-center justify-center h-screen">
-        <div class="p-12 max-w-6xl bg-white rounded-lg overflow-hidden shadow-lg">
+        <div class="p-12 max-w-6xl text-black bg-white rounded-lg overflow-hidden shadow-lg">
             <div>
             <h1 class="font-bold text-2xl mb-2">Machine Learning Model</h1>
             </div>
