Fix total_income label

--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -37,7 +37,7 @@
         <label class="block text-sm font-bold mb-2" for="total_income">
           Enter your total annual income: 
         </label>
-        <input type="number" id="total_income" name="income" min="0" max="500000" value="0">
+        <input type="number" id="total_income" name="total_income" min="0" max="500000" value="0">
         
         <br />
         <br />
