Add borders for number inputs

--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -29,25 +29,45 @@
         <label class="block text-sm font-bold mb-2" for="age">
           Enter your age: 
         </label>
-        <input type="number" id="age" name="age" min="18" max="100" value="18">
-        
-        <br />
+        <input 
+          type="number"
+          id="age" 
+          name="age" 
+          min="18" 
+          max="100" 
+          value="18"
+          class="block appearance-none bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
+        >
+
         <br />
         
         <label class="block text-sm font-bold mb-2" for="total_income">
           Enter your total annual income: 
         </label>
-        <input type="number" id="total_income" name="total_income" min="0" max="500000" value="0">
+        <input 
+          type="number" 
+          id="total_income" 
+          name="total_income" 
+          min="0" 
+          max="500000" 
+          value="0"
+          class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
+        >
         
-        <br />
         <br />
 
         <label class="block text-sm font-bold mb-2" for="total_worked">
           Enter the total years you have worked: 
         </label>
-        <input type="number" id="total_worked" name="total_worked" min="1" max="60" value="1">
+        <input type="number" 
+          id="total_worked" 
+          name="total_worked" 
+          min="1" 
+          max="60" 
+          value="1"
+          class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline"
+        >
         
-        <br />
         <br />
 
         <label class="block text-sm font-bold mb-2" for="employment_status">
