--- a/webapp/templates/results.html
+++ b/webapp/templates/results.html
@@ -6,9 +6,17 @@
 </head>
 
 <body class="font-mono">
-  <div class="result mt-12" align="center">
-    <p>{{ result }}</p>
-      
-  </div>
+    <div class="mt-5 mb-5 flex items-center justify-center h-screen">
+        <div class="p-12 max-w-6xl text-black bg-white rounded-lg overflow-hidden shadow-lg">
+            <div>
+            <h1 class="flex items-center justify-center font-bold text-2xl mb-2">Results Are In!</h1>
+            </div>
+            <hr />
+            <br />
+            <h2 class="flex items-center justify-center font-bold text-6xl">{{ result }}</h2>
+            <a href="/" class="flex items-center justify-center bg-blue-500 text-white font-bold mt-10 p-2 rounded focus:outline-none focus:shadow-outline">Back to Form</a>
+        </div>
+    </div>
 </body>
+
 {% endblock %}
