--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -21,6 +21,9 @@
               <a class="nav-link" href="{{ url_for('about') }}">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('accessibility') }}">Accessibility</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('dataset') }}">Dataset</a>
             </li>
             <li class="nav-item">
